[package]
name = "sanctum"
version = "0.1.0"
edition = "2021"

[dependencies]
ahash = "0.8.11"
image = { version = "0.25.5", optional = true }
noise = "0.9.0"
nom = "8.0.0"
ordered-float = "5.0.0"
rand = "0.9.0"
smallvec = "1.14.0"
ustr = "1.1.0"

[features]
default = ["image"]
image = ["dep:image"]
